[package]
name = "schnack"
version = "0.1.0"
edition = "2021"
readme = "README.md"

[dependencies]
eframe = { version = "0.26.2", features = ["default"]}

# For image support:
egui_extras = { version = "0.26.2", features = ["default", "image"] }

env_logger = { version = "0.10", default-features = false, features = [
    "auto-color",
    "humantime",
] }
